# m25

./: README.md  readme.md
.github/workflows/: deno.yml  go.yml  rust.yml
docs/contract/: Cargo.toml  contract.wasm  readme.md
docs/contract/src/: lib.rs  test.rs
docs/contract/test_snapshots/test/: test.1.json  test_bye.1.json
docs/examples/contract-spec/: readme.md
docs/examples/contract-spec/client-from-specs/: deno.json  main.js  readme.md
docs/examples/contract-spec/extracting-specs-js/: deno.json  main.js  readme.md
docs/examples/contract-spec/extracting-specs-rust/: Cargo.toml  readme.md
docs/examples/contract-spec/extracting-specs-rust/src/: main.rs
docs/examples/soroban-env/: Cargo.toml  readme.md
docs/examples/soroban-env/src/: main.rs
docs/examples/xdr-json/: readme.md
docs/examples/xdr-json/decoding-go/: go.mod  go.sum  main.go
docs/examples/xdr-json/decoding-js/: deno.json  main.ts
docs/examples/xdr-json/decoding-rust/: Cargo.toml
docs/examples/xdr-json/decoding-rust/src/: main.rs
